3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
Changes for SVN:

Make method/property coherent for Python objects.
 plugins/cfpython/cfpython_archetype.c cfpython_party.c cfpython_region.c
 plugins/cfpython/include/cfpython_archetype_private.h cfpython_party_private.h cfpython_region_private.h
Ryo 2006-12-26

Fix for bug #1527978: summon fog spell is somewhat broken.
Summon now occurs either randomly around (when casting on oneself),
or around, either clockwise or anticlockwise.
 server/pets.c
Ryo 2006-12-26

Implement feature request #1617446 :add "glow radius" to perceive self
 server/spell_effect.c
Ryo 2006-12-26

Add "Crossfire.Object.LastEat. More return fixes.
 plugins/cfpython/include/cfpython_object_private.h: add "Subtype".
 plugins/cfpython/cfpython_object.c: add "Subtype".
 server/plugins.c: fix wrong return values.
Ryo 2006-12-26

Fix wrong return values for plugin calls. Add "Crossfire.Object.Subtype" property.
 plugins/cfpython/include/cfpython_object_private.h: add "Subtype".
 plugins/cfpython/cfpython_object.c: add "Subtype".
 server/plugins.c: fix wrong return values.
Ryo 2006-12-26

server/player.c: Added a supplementary check on attacked objects, so that an
    alive object that has its FLAG_MONSTER set is always a preferred target over
    an alive object without that flag.
    Fix for the bug mentioned in #1551404

server/skill_util.c: Corrected the flags passed to change_exp when failing
    to properly write a spell scroll, which resulted in loss of experience in
    the wrong skill.
    Fix for the bug mentioned in #1530000
Yann Chachkoff 2006-12-26

lib/{Makefile.in,adm/map_info,collect.pl.in,Makefile.am}: ignore .svn rather
    than CVS.